// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`category Unknown URL should return a 404 even if it's substring matches a path 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
    "2": Object {
      "author": 1,
      "id": 2,
      "link": "/post-2/attachment-2/",
      "slug": "attachment-2",
      "type": "attachment",
    },
    "3": Object {
      "author": 1,
      "id": 3,
      "link": "/post-3/attachment-3/",
      "slug": "attachment-3",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/category/cat-1/",
      "parent": 0,
      "slug": "cat-1",
      "taxonomy": "category",
    },
  },
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/category/cat-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "taxonomy": "category",
    },
    "/category/undefined/cat-1/": Object {
      "errorStatus": 404,
      "errorStatusText": "You have tried to access content at route: /category/undefined/cat-1/ but it does not exist",
      "is404": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-2/attachment-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-3/attachment-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
  },
  "get": [Function],
  "handledQueries": Object {
    "p": true,
  },
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [],
      "type": "post",
    },
    "2": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          2,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 2,
      "id": 2,
      "link": "/post-2/",
      "slug": "post-2",
      "tags": Array [],
      "type": "post",
    },
    "3": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          3,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 3,
      "id": 3,
      "link": "/post-3/",
      "slug": "post-3",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`category doesn't exist in source.category 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
    "2": Object {
      "author": 1,
      "id": 2,
      "link": "/post-2/attachment-2/",
      "slug": "attachment-2",
      "type": "attachment",
    },
    "3": Object {
      "author": 1,
      "id": 3,
      "link": "/post-3/attachment-3/",
      "slug": "attachment-3",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/category/cat-1/",
      "parent": 0,
      "slug": "cat-1",
      "taxonomy": "category",
    },
  },
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/category/cat-1/": Object {
      "id": 1,
      "isArchive": true,
      "isCategory": true,
      "isFetching": false,
      "isReady": true,
      "isTaxonomy": true,
      "items": Array [
        Object {
          "id": 1,
          "link": "/post-1/",
          "type": "post",
        },
        Object {
          "id": 2,
          "link": "/post-2/",
          "type": "post",
        },
        Object {
          "id": 3,
          "link": "/post-3/",
          "type": "post",
        },
      ],
      "link": "/category/cat-1/",
      "next": "/category/cat-1/page/2/",
      "page": 1,
      "query": Object {},
      "route": "/category/cat-1/",
      "taxonomy": "category",
      "total": 5,
      "totalPages": 2,
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-2/attachment-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-3/attachment-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
  },
  "get": [Function],
  "handledQueries": Object {
    "p": true,
  },
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [],
      "type": "post",
    },
    "2": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          2,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 2,
      "id": 2,
      "link": "/post-2/",
      "slug": "post-2",
      "tags": Array [],
      "type": "post",
    },
    "3": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          3,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 3,
      "id": 3,
      "link": "/post-3/",
      "slug": "post-3",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`category doesn't return 404 if the first page is empty (no headers) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json",
  "attachment": Object {},
  "author": Object {},
  "authorBase": "",
  "category": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/category/cat-1/",
      "parent": 0,
      "slug": "cat-1",
      "taxonomy": "category",
    },
  },
  "categoryBase": "",
  "data": Object {
    "/category/cat-1/": Object {
      "id": 1,
      "isArchive": true,
      "isCategory": true,
      "isFetching": false,
      "isReady": true,
      "isTaxonomy": true,
      "items": Array [],
      "link": "/category/cat-1/",
      "page": 1,
      "query": Object {},
      "route": "/category/cat-1/",
      "taxonomy": "category",
      "total": 0,
      "totalPages": 0,
    },
  },
  "get": [Function],
  "handledQueries": Object {
    "p": true,
  },
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`category doesn't return 404 if the first page is empty 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json",
  "attachment": Object {},
  "author": Object {},
  "authorBase": "",
  "category": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/category/cat-1/",
      "parent": 0,
      "slug": "cat-1",
      "taxonomy": "category",
    },
  },
  "categoryBase": "",
  "data": Object {
    "/category/cat-1/": Object {
      "id": 1,
      "isArchive": true,
      "isCategory": true,
      "isFetching": false,
      "isReady": true,
      "isTaxonomy": true,
      "items": Array [],
      "link": "/category/cat-1/",
      "page": 1,
      "query": Object {},
      "route": "/category/cat-1/",
      "taxonomy": "category",
      "total": 0,
      "totalPages": 0,
    },
  },
  "get": [Function],
  "handledQueries": Object {
    "p": true,
  },
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`category fetchs from a different endpoint with extra params 1`] = `
Array [
  Array [
    Object {
      "endpoint": "categories",
      "params": Object {
        "slug": "cat-1",
      },
    },
  ],
  Array [
    Object {
      "endpoint": "multiple-post-type",
      "params": Object {
        "_embed": true,
        "categories": 1,
        "page": 1,
        "search": undefined,
        "type": Array [
          "post",
          "cpt",
        ],
      },
    },
  ],
]
`;

exports[`category fetchs from a different endpoint with extra params 2`] = `
Object {
  "api": "https://test.frontity.org/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
    "12": Object {
      "author": 1,
      "id": 12,
      "link": "/cpt/cpt-11/attachment-cpt-11/",
      "slug": "attachment-cpt-11",
      "type": "attachment",
    },
    "2": Object {
      "author": 1,
      "id": 2,
      "link": "/post-2/attachment-2/",
      "slug": "attachment-2",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/category/cat-1/",
      "parent": 0,
      "slug": "cat-1",
      "taxonomy": "category",
    },
  },
  "categoryBase": "",
  "cpt": Object {
    "11": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          12,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 12,
      "id": 11,
      "link": "/cpt/cpt-11/",
      "slug": "cpt-11",
      "tags": Array [],
      "type": "cpt",
    },
  },
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/category/cat-1/": Object {
      "id": 1,
      "isArchive": true,
      "isCategory": true,
      "isFetching": false,
      "isReady": true,
      "isTaxonomy": true,
      "items": Array [
        Object {
          "id": 1,
          "link": "/post-1/",
          "type": "post",
        },
        Object {
          "id": 11,
          "link": "/cpt/cpt-11/",
          "type": "cpt",
        },
        Object {
          "id": 2,
          "link": "/post-2/",
          "type": "post",
        },
      ],
      "link": "/category/cat-1/",
      "next": "/category/cat-1/page/2/",
      "page": 1,
      "query": Object {},
      "route": "/category/cat-1/",
      "taxonomy": "category",
      "total": 5,
      "totalPages": 2,
    },
    "/cpt/cpt-11/": Object {
      "id": 11,
      "isFetching": false,
      "isReady": false,
      "type": "cpt",
    },
    "/cpt/cpt-11/attachment-cpt-11/": Object {
      "id": 12,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-2/attachment-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
  },
  "get": [Function],
  "handledQueries": Object {
    "p": true,
  },
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {
    "type": Array [
      "post",
      "cpt",
    ],
  },
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [],
      "type": "post",
    },
    "2": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          2,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 2,
      "id": 2,
      "link": "/post-2/",
      "slug": "post-2",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "multiple-post-type",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`category is requested with any query param 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
    "2": Object {
      "author": 1,
      "id": 2,
      "link": "/post-2/attachment-2/",
      "slug": "attachment-2",
      "type": "attachment",
    },
    "3": Object {
      "author": 1,
      "id": 3,
      "link": "/post-3/attachment-3/",
      "slug": "attachment-3",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/category/cat-1/",
      "parent": 0,
      "slug": "cat-1",
      "taxonomy": "category",
    },
  },
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/category/cat-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "taxonomy": "category",
    },
    "/category/cat-1/?some=param": Object {
      "id": 1,
      "isArchive": true,
      "isCategory": true,
      "isFetching": false,
      "isReady": true,
      "isTaxonomy": true,
      "items": Array [
        Object {
          "id": 1,
          "link": "/post-1/",
          "type": "post",
        },
        Object {
          "id": 2,
          "link": "/post-2/",
          "type": "post",
        },
        Object {
          "id": 3,
          "link": "/post-3/",
          "type": "post",
        },
      ],
      "link": "/category/cat-1/?some=param",
      "next": "/category/cat-1/page/2/?some=param",
      "page": 1,
      "query": Object {
        "some": "param",
      },
      "route": "/category/cat-1/",
      "taxonomy": "category",
      "total": 5,
      "totalPages": 2,
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-2/attachment-2/": Object {
      "id": 2,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-3/attachment-3/": Object {
      "id": 3,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
  },
  "get": [Function],
  "handledQueries": Object {
    "p": true,
  },
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [],
      "type": "post",
    },
    "2": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          2,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 2,
      "id": 2,
      "link": "/post-2/",
      "slug": "post-2",
      "tags": Array [],
      "type": "post",
    },
    "3": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          3,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 3,
      "id": 3,
      "link": "/post-3/",
      "slug": "post-3",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`category returns 404 if category doesn't exist in WP 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json",
  "attachment": Object {},
  "author": Object {},
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/category/non-existent/": Object {
      "errorStatus": 404,
      "errorStatusText": "entity from endpoint \\"categories\\" with slug \\"non-existent\\" not found",
      "is404": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
    },
  },
  "get": [Function],
  "handledQueries": Object {
    "p": true,
  },
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`category returns 404 if the page fetched is out of range 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json",
  "attachment": Object {},
  "author": Object {},
  "authorBase": "",
  "category": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/category/cat-1/",
      "parent": 0,
      "slug": "cat-1",
      "taxonomy": "category",
    },
  },
  "categoryBase": "",
  "data": Object {
    "/category/cat-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "taxonomy": "category",
    },
    "/category/cat-1/page/3/": Object {
      "errorStatus": 404,
      "errorStatusText": "category with slug \\"cat-1\\" doesn't have page 3",
      "is404": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
    },
  },
  "get": [Function],
  "handledQueries": Object {
    "p": true,
  },
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;

exports[`category was populated but not accessed 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json",
  "attachment": Object {
    "4": Object {
      "author": 1,
      "id": 4,
      "link": "/post-4/attachment-4/",
      "slug": "attachment-4",
      "type": "attachment",
    },
    "5": Object {
      "author": 1,
      "id": 5,
      "link": "/post-5/attachment-5/",
      "slug": "attachment-5",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/category/cat-1/",
      "parent": 0,
      "slug": "cat-1",
      "taxonomy": "category",
    },
  },
  "categoryBase": "",
  "data": Object {
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
    },
    "/category/cat-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "taxonomy": "category",
    },
    "/category/cat-1/page/2/": Object {
      "id": 1,
      "isArchive": true,
      "isCategory": true,
      "isFetching": false,
      "isReady": true,
      "isTaxonomy": true,
      "items": Array [
        Object {
          "id": 4,
          "link": "/post-4/",
          "type": "post",
        },
        Object {
          "id": 5,
          "link": "/post-5/",
          "type": "post",
        },
      ],
      "link": "/category/cat-1/page/2/",
      "page": 2,
      "previous": "/category/cat-1/",
      "query": Object {},
      "route": "/category/cat-1/",
      "taxonomy": "category",
      "total": 5,
      "totalPages": 2,
    },
    "/post-4/": Object {
      "id": 4,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-4/attachment-4/": Object {
      "id": 4,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
    "/post-5/": Object {
      "id": 5,
      "isFetching": false,
      "isReady": false,
      "type": "post",
    },
    "/post-5/attachment-5/": Object {
      "id": 5,
      "isFetching": false,
      "isReady": false,
      "type": "attachment",
    },
  },
  "get": [Function],
  "handledQueries": Object {
    "p": true,
  },
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "4": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          4,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 4,
      "id": 4,
      "link": "/post-4/",
      "slug": "post-4",
      "tags": Array [],
      "type": "post",
    },
    "5": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          5,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 5,
      "id": 5,
      "link": "/post-5/",
      "slug": "post-5",
      "tags": Array [],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
}
`;
